--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>📚 Stok Buku Berbie Cinderella</h1>
   <p>Selamat datang! Website ini menampilkan stok buku Berbie Cinderella dari Google Sheets dengan REST API.</p>
   <p><strong>Judul:</strong> Berbie Cinderella Jilid 1–10</p>
-  <p><strong>Penulis:</strong> Tiara P.L.D</p>
+  <p><strong>Penulis:</strong> Tiara Putri Latifani Dianata</p>
   <p><strong>Stok:</strong> 100 buku per jilid</p>
   <p><strong>Harga:</strong> Rp. 30.000 – Rp. 39.000</p>
   <p>Data diambil dari Google Sheets lewat Google Apps Script API.</p>
