--- a/index.html
+++ b/index.html
@@ -4,14 +4,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stok Buku Berbie Cinderella</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📚 Stok Buku Berbie Cinderella</h1>
-  <p>Selamat datang! Website ini menampilkan stok buku Berbie Cinderella dari Google Sheets dengan REST API.</p>
-  <p><strong>Judul:</strong> Berbie Cinderella Jilid 1–10</p>
-  <p><strong>Penulis:</strong> Tiara Putri L.D.</p>
-  <p><strong>Stok:</strong> 100 buku per jilid</p>
-  <p><strong>Harga:</strong> Rp. 30.000 – Rp. 39.000</p>
-  <p>Data diambil dari Google Sheets lewat Google Apps Script API.</p>
+  <div class="container">
+    <h1>📚 Stok Buku Berbie Cinderella</h1>
+    
+    <p>Selamat datang! Website ini menampilkan stok buku Berbie Cinderella dari Google Sheets dengan REST API.</p>
+    <p><strong>Judul:</strong> Berbie Cinderella Jilid 1–10</p>
+    <p><strong>Penulis:</strong> Tiara Putri L.D.</p>
+    <p><strong>Stok:</strong> 100 buku per jilid</p>
+    <p><strong>Harga:</strong> Rp. 30.000 – Rp. 39.000</p>
+    <p>Data diambil dari Google Sheets lewat Google Apps Script API.</p>
+
+    <table id="bookTable">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Judul Buku</th>
+          <th>Jilid</th>
+          <th>Penulis</th>
+          <th>Stok</th>
+          <th>Harga</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
